added complex system to calculate food facts
